--- a/FRONTEND/ArgentBank-website/src/Pages/Auth/Auth.css
+++ b/FRONTEND/ArgentBank-website/src/Pages/Auth/Auth.css
@@ -1,4 +1,12 @@
-[id=login] {
+.bg-dark {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height: 85vh;
+  background-color: #12002b;
+}
+
+#login {
   box-sizing: border-box;
   margin: 0 auto;
   margin-top: 3rem;
@@ -6,27 +14,27 @@
   width: 350px;
   background-color: white;
 }
-[id=login] h2 {
+#login h1 {
   font-size: 1.5em;
 }
-[id=login] fieldset {
+#login fieldset {
   text-align: left;
   border: none;
   padding: 0;
   padding-bottom: 15px;
 }
-[id=login] input {
+#login input {
   padding: 5px;
   font-size: 1.3rem;
 }
-[id=login] button {
+#login button {
   display: block;
   width: 100%;
   padding: 8px;
   font-size: 1rem;
   text-decoration: underline;
 }
-[id=login] p {
+#login p {
   color: red;
   font-weight: italic;
 }
@@ -37,12 +45,4 @@
 
 label.sign {
   font-weight: bold;
-}
-
-.bg-dark {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  height: 85vh;
-  background-color: #12002b;
 }/*# sourceMappingURL=Auth.css.map */
