--- a/FRONTEND/ArgentBank-website/src/Pages/Profile/Profile.css
+++ b/FRONTEND/ArgentBank-website/src/Pages/Profile/Profile.css
@@ -1,3 +1,13 @@
+.profile {
+  background-color: #12002b;
+  padding-bottom: 10%;
+}
+.profile h1 {
+  color: white;
+  text-align: center;
+  padding-top: 5%;
+}
+
 .account {
   display: flex;
   justify-content: space-between;
