--- a/FRONTEND/ArgentBank-website/src/Pages/Profile/Profile.scss
+++ b/FRONTEND/ArgentBank-website/src/Pages/Profile/Profile.scss
@@ -1,3 +1,14 @@
+.profile{
+  background-color: #12002b;
+  padding-bottom: 10%;
+
+  h1{
+    color: white;
+    text-align: center;
+    padding-top: 5%;
+  
+  }
+}
 .account {
     display: flex;
     justify-content: space-between;
