--- a/FRONTEND/designs/css/main.css
+++ b/FRONTEND/designs/css/main.css
@@ -19,6 +19,8 @@ body {
 
 .bg-dark {
   background-color: #12002b;
+ 
+ padding:50px;
 }
 
 .sr-only {
@@ -170,7 +172,7 @@ body {
   background-color: white;
   width: 300px;
   margin: 0 auto;
-  margin-top: 3rem;
+
   padding: 2rem;
 }
 
