--- a/FRONTEND/ArgentBank-website/src/Pages/Profile/Profile.css
+++ b/FRONTEND/ArgentBank-website/src/Pages/Profile/Profile.css
@@ -7,6 +7,29 @@
   text-align: center;
   padding-top: 5%;
 }
+.profile form {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.profile form button {
+  width: 100%;
+  padding: 8px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-top: 1rem;
+  border-color: #00bc77;
+  background-color: #00bc77;
+  color: #fff;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.profile form button:hover, .profile form button:focus {
+  opacity: 0.95;
+}
 
 .account {
   display: flex;
