--- a/FRONTEND/ArgentBank-website/src/components/Hero/Hero.scss
+++ b/FRONTEND/ArgentBank-website/src/components/Hero/Hero.scss
@@ -2,7 +2,7 @@
   position: relative;
   margin: 0;
   height: 300px;
-  background-image: url('../../assets/images/bank-tree.jpeg');
+  background-image: url('../../assets/images/bank-tree.webp');
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
