--- a/FRONTEND/ArgentBank-website/src/components/NavBar/NavBar.css
+++ b/FRONTEND/ArgentBank-website/src/components/NavBar/NavBar.css
@@ -1,69 +1,47 @@
-.login {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.userName {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  text-decoration: none;
-}
-.userName p {
-  margin-right: 15px;
-}
-.userName p:hover {
-  text-decoration: underline;
-}
-.userName i {
-  margin-right: 5px;
-}
-
 .main-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5px 20px;
 }
-
-.main-nav a {
-  font-weight: bold;
-  color: #2c3e50;
-}
-
-.main-nav a.router-link-exact-active {
-  color: #42b983;
-}
-
-.main-nav-item {
+.main-nav .main-nav-item {
   text-decoration: none;
   margin-right: 0.5rem;
 }
-.main-nav-item i {
+.main-nav .main-nav-item i {
   margin-right: 10px;
 }
-
-.main-nav-item:hover {
+.main-nav .main-nav-item:hover {
   text-decoration: underline;
 }
-
-.main-nav-logo {
+.main-nav .main-nav-logo {
   display: flex;
   align-items: center;
 }
-
-.main-nav-logo-image {
+.main-nav .main-nav-logo .main-nav-logo-image {
   max-width: 100%;
   width: 200px;
 }
-
-/*Media Queries Mobile*/
 @media only screen and (max-width: 600px) {
-  .main-nav-logo-image {
+  .main-nav .main-nav-logo .main-nav-logo-image {
     width: 150px;
   }
-  .main-nav a {
-    font-size: 0.8rem;
-  }
+}
+.main-nav .login {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+.main-nav .login .user-info {
+  display: flex;
+}
+.main-nav .login .user-info p {
+  margin-right: 15px;
+}
+.main-nav .login .user-info p:hover {
+  text-decoration: underline;
+}
+.main-nav .login .user-info i {
+  margin-right: 5px;
 }/*# sourceMappingURL=NavBar.css.map */
