--- a/FRONTEND/ArgentBank-website/src/components/NavBar/NavBar.scss
+++ b/FRONTEND/ArgentBank-website/src/components/NavBar/NavBar.scss
@@ -1,69 +1,60 @@
-.login{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .userName{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    text-decoration: none;
-    p{
-      margin-right: 15px;
-      &:hover{
-        text-decoration: underline;
-      }
-    }
-    i{
-      margin-right: 5px;
-    }
-  }
-  .main-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 20px;
-  }
-  
-  .main-nav a {
-    font-weight: bold;
-    color: #2c3e50;
+.main-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 20px;
 
-  }
-  
-  .main-nav a.router-link-exact-active {
-    color: #42b983;
-  }
-  
+
   .main-nav-item {
     text-decoration: none;
     margin-right: 0.5rem;
-    i{
+
+    i {
       margin-right: 10px;
     }
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
-  
-  .main-nav-item:hover {
-    text-decoration: underline;
-  }
-  
+
   .main-nav-logo {
     display: flex;
     align-items: center;
-  }
-  
-  .main-nav-logo-image {
-    max-width: 100%;
-    width: 200px;
-  }
-  
-  /*Media Queries Mobile*/
-  @media only screen and (max-width: 600px) {
+
     .main-nav-logo-image {
-      width: 150px;
-    }
-    .main-nav a {
-      font-size: 0.8rem;
-      
+      max-width: 100%;
+      width: 200px;
+
+      // Media Query pour les écrans mobiles
+      @media only screen and (max-width: 600px) {
+        width: 150px;
+      }
     }
   }
+
+  // Styles pour les liens d'utilisateur connecté
+  .login{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+
+  .user-info {
+    display: flex;
+
+
+    p {
+      margin-right: 15px;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    i {
+      margin-right: 5px;
+    }
+  }
+}
+}
