--- a/FRONTEND/designs/css/main.css
+++ b/FRONTEND/designs/css/main.css
@@ -47,6 +47,8 @@ body {
 .main-nav a {
   font-weight: bold;
   color: #2c3e50;
+  display: flex;
+  flex-direction: row;
 }
 
 .main-nav a.router-link-exact-active {
