--- a/FRONTEND/ArgentBank-website/src/components/Hero/Hero.scss
+++ b/FRONTEND/ArgentBank-website/src/components/Hero/Hero.scss
@@ -2,43 +2,46 @@
   position: relative;
   margin: 0;
   height: 300px;
+  width: 100%;
   background-image: url('../../assets/images/bank-tree.webp');
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
+}
 
-  figcaption {
-    position: relative;
-    top: 2rem;
-    margin: 0 auto;
-    padding: 2rem;
-    width: 200px;
-    background: white;
-    text-align: left;
-  }
+figcaption {
+  position: relative;
+  top: 2rem;
+  margin: 0 auto;
+  padding: 2rem;
+  width: 80%; /* Utilisation d'unités relatives pour la réactivité */
+  max-width: 300px;
+  background: white;
+  text-align: left;
+}
 
-  @media (min-width: 920px) {
+@media (min-width: 920px) {
+  #hero {
     height: 400px;
     background-position: 0% 33%;
-
-    figcaption {
-
-      position: absolute;
-      top: 50px;
-      right: 50px;
-      margin: 2rem;
-      width: 300px;
-    }
-
-    figcaption p {
-      font-size: 1.5rem;
-    }
-
-    p.text {
-      font-size: 1.2rem;
-    }
   }
 
+  figcaption {
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    margin: 2rem;
+    width: 50%; /* Utilisation d'unités relatives pour la réactivité */
+    max-width: 300px;
+  }
+
+  figcaption p {
+    font-size: 1.5rem;
+  }
+
+  p.text {
+    font-size: 1.2rem;
+  }
 }
 
 .subtitle {
