--- a/FRONTEND/designs/css/main.css
+++ b/FRONTEND/designs/css/main.css
@@ -73,9 +73,17 @@ body {
   max-width: 100%;
   width: 200px;
 }
+@media (max-width: 960px)
 
+{
+
+ .main-nav-logo-image {
+   max-width: 100px;
+   width:100% ;
+ }
+}
 .hero {
-  background-image: url('../img/bank-tree.jpeg');
+  background-image: url('./Assets/image');
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -139,7 +147,9 @@ body {
 }
 
 .feature-icon {
-  width: 100px;
+  width: 100%;
+  max-width: 100px;
+  height: 100px;
   border: 10px solid #00bc77;
   border-radius: 50%;
   padding: 1rem;
