--- a/FRONTEND/ArgentBank-website/src/Pages/Profile/Profile.css
+++ b/FRONTEND/ArgentBank-website/src/Pages/Profile/Profile.css
@@ -2,11 +2,13 @@
   background-color: #12002b;
   padding-bottom: 10%;
 }
+
 .profile h1 {
   color: white;
   text-align: center;
   padding-top: 5%;
 }
+
 .profile form {
   width: 80%;
   margin: 0 auto;
@@ -15,9 +17,17 @@
   justify-content: center;
   align-items: center;
 }
-.profile form button {
-  width: 100%;
-  padding: 8px;
+
+.profile form label {
+  margin: 10px;
+}
+
+.profile form .username, .profile form .firstname, .profile form .lastname {
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+
+.profile form .buttonsContainer {
   font-size: 1.1rem;
   font-weight: bold;
   margin-top: 1rem;
@@ -25,9 +35,12 @@
   background-color: #00bc77;
   color: #fff;
   border-radius: 3px;
+  display: flex;
+  flex-direction: row;
   cursor: pointer;
 }
-.profile form button:hover, .profile form button:focus {
+
+.profile form .buttonsContainer:hover, .profile form .buttonsContainer:focus {
   opacity: 0.95;
 }
 
@@ -45,25 +58,31 @@
   text-align: left;
   margin-bottom: 2rem;
 }
+
 .account label {
   width: 100%;
   flex: 1;
 }
+
 .account h3 {
   margin: 0;
   padding: 0;
   font-size: 1rem;
   font-weight: normal;
 }
+
 .account p {
   margin: 0;
 }
+
 .account .header {
   background-color: white;
 }
+
 .account .header h1 {
   color: black;
 }
+
 .account button {
   display: block;
   width: 100%;
@@ -77,12 +96,15 @@
   border-radius: 3px;
   cursor: pointer;
 }
+
 .account button:hover, .account button:focus {
   opacity: 0.95;
 }
+
 .account b {
   font-size: 2.5rem;
 }
+
 @media (min-width: 720px) {
   .account {
     flex-direction: row;
@@ -90,4 +112,4 @@
   .account button {
     width: 200px;
   }
-}/*# sourceMappingURL=Profile.css.map */
+}
